# go-sdk

./: .gitignore  .golangci.yml  .goreleaser.yaml  CONTRIBUTING.md  Makefile  README.md  codecov.yml  go.mod  go.sum  sonar-project.properties
.claude/: CLAUDE.md
.claude/skills/release-tag-cut/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci-success.yml  codeql.yml  coverage.yml  docs-metadata.yml  docs-site.yml  go-test.yml  goreleaser.yml  govulncheck.yml  lint.yml  native-ffi.yml  native-pin-consistency.yml  pre-commit.yml  release.yml  sonarqube.yml
assembly/: aasm_runtime.go  aasm_runtime_branches_test.go  aasm_runtime_test.go  audit.go  audit_test.go  audit_wire.go  audit_wire_test.go  boot_ffi_disconnect_leak_test.go  boot_managed_sidecar_leak_test.go  boot_managed_sidecar_test.go  boot_register_governance_test.go  boot_version_passthrough_test.go  close_ffi_disconnect_test.go  context.go  context_nil_test.go  context_test.go  control_plane_url_test.go  coverage_regression_test.go  credential_redaction_test.go  defaults.go  doc.go  enforcement_mode.go  enforcement_mode_test.go  env_prefix_test.go  error_prefix_test.go  error_types_test.go  example_test.go  fail_closed_advisory_test.go  fail_closed_governance_test.go  ffi_governance_client.go  ffi_governance_client_test.go  ffi_governance_client_unit_test.go  gateway_client_unit_test.go  gateway_resolver.go  gateway_resolver_more_test.go  gateway_resolver_test.go  gateway_resolver_unix.go  gateway_resolver_unix_test.go  gateway_resolver_windows.go  governance_errors.go  (+41 more)
docs/: TEMPLATE.md  _index.md  api-reference.md  architecture.md  compatibility.md  configuration.md  core-concepts.md  examples.md  getting-started.md  golden-path.md  quick-start.md  release-process.md  troubleshooting.md
docs/adr/: 0001-go-module-path.md
docs/examples/: _index.md  basic-agent.md  cli-runtime-integration.md  langchaingo.md  setup.md  tool-policy.md
docs/guides/: _index.md  container-base-image.md  framework-integration.md  govern-an-agents-tools.md  handle-decisions-and-errors.md
examples/minimal/: main.go
internal/ffi/: capturing.go  capturing_constructors_test.go  capturing_test.go  cgo_bridge.go  cgo_bridge_test.go  client.go  client_branches_test.go  client_error_test.go  client_test.go  doc.go  fallback_nocgo_test.go  fallback_uds_branches_test.go  fallback_uds_nocgo.go  integration_send_events_test.go  memory_harness_test.go  query_policy.go  query_policy_cgo_test.go  query_policy_test.go  race_safety_test.go  register.go  register_fallback_client_nocgo_test.go  register_fallback_nocgo_test.go  register_status_test.go  register_test.go  status.go  status_branches_test.go
internal/proto/: common.pb.go  policy.pb.go  policy_grpc.pb.go
internal/quickstartgen/: doc.go
internal/version/: doc.go  metadata.go
metadata/: sdk.yaml
metadata/quickstart/: README.md  manifest.json
metadata/quickstart/_snippets/: basic-agent.go.txt  cli-runtime-integration.go.txt  langchaingo.go.txt  tool-policy.go.txt
native/aa-ffi-go/: Cargo.toml  cbindgen.toml  regen-header.sh
native/aa-ffi-go/include/: aa_ffi_go.h
native/aa-ffi-go/src/: lib.rs
scripts/: gen-metadata.go  gen-proto.sh  gen-quickstart-tabs.go
verification-reports/: AAASM-2704.md
website/: go.mod  hugo.toml
website/assets/css/: custom.css
website/assets/js/: consent-banner.js  feedback-widget.js
website/data/: versions.toml
website/layouts/: baseof.html  home.html  list.html  single.html
website/layouts/_partials/: navbar-title.html  version-banner.html  version-selector.html
website/layouts/_partials/custom/: feedback-widget.html  head-end.html
website/redirect/: index.html
website/scripts/: build_all_versions.sh  render_versions_toml.py  versions_channels.py  versions_channels_test.py
