[package]
name = "aa-ffi-go"
version = "0.0.0"
edition = "2021"
publish = false
description = "Go C-ABI static library bindings for Agent Assembly (thin shim over aa-sdk-client)"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Shared SDK runtime-client consumed via a git-SHA pin (ADR 0002 / AAASM-2559),
# mirroring node-sdk/native/aa-ffi-node and python-sdk/rust/aa-ffi-python. The
# advisory preflight arrives transitively via aa-sdk-client's default features.
# Keep this SHA in lockstep with the node/python shims.
aa-sdk-client = { git = "https://github.com/ai-agent-assembly/agent-assembly.git", rev = "4f9eea19c2c7e9d6730319e427861a291010fc75", package = "aa-sdk-client" }
# Generated protobuf types, pinned to the same SHA as aa-sdk-client. Needed to
# build the `CheckActionRequest` / read the `CheckActionResponse` of the
# synchronous policy query (`AssemblyClient::query_policy`); aa-sdk-client does
# not re-export aa_proto, so the shim depends on it directly.
aa-proto = { git = "https://github.com/ai-agent-assembly/agent-assembly.git", rev = "4f9eea19c2c7e9d6730319e427861a291010fc75", package = "aa-proto" }
