[package]
name = "aa-ffi-go"
version = "0.0.0"
edition = "2021"
publish = false
description = "Go C-ABI static library bindings for Agent Assembly (thin shim over aa-sdk-client)"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Shared SDK runtime-client consumed via a git-SHA pin (ADR 0002 / AAASM-2559),
# mirroring node-sdk/native/aa-ffi-node and python-sdk/rust/aa-ffi-python. The
# advisory preflight arrives transitively via aa-sdk-client's default features.
# Keep this SHA in lockstep with the node/python shims.
aa-sdk-client = { git = "https://github.com/ai-agent-assembly/agent-assembly.git", rev = "ebc4d7dc9da81cdf4f265d681c138500ca6e98e7", package = "aa-sdk-client" }
# Generated protobuf types, pinned to the same SHA as aa-sdk-client. Needed to
# build the `CheckActionRequest` / read the `CheckActionResponse` of the
# synchronous policy query (`AssemblyClient::query_policy`); aa-sdk-client does
# not re-export aa_proto, so the shim depends on it directly.
aa-proto = { git = "https://github.com/ai-agent-assembly/agent-assembly.git", rev = "ebc4d7dc9da81cdf4f265d681c138500ca6e98e7", package = "aa-proto" }
# `AssemblyClient::register` is async (tonic gRPC), but the C-ABI `aa_register`
# surface is synchronous. The shim drives that one future to completion on a
# private current-thread runtime — hence only the `rt` feature is needed (the
# `query_policy` / event paths stay on the shared client's blocking channel).
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
# Mock UDS runtime for the query_policy round-trip tests: a Tokio listener
# speaks the aa-sdk-client wire codec (heartbeat + length-delimited prost) and
# replies with a CheckActionResponse.
tokio = { version = "1", features = ["net", "rt", "macros", "io-util", "time"] }
prost = "0.14"
